# VideoStreamRecorder

./: Cargo.toml  Dockerfile  INSTALL.md  Makefile  README.md  build.rs  design.md  docker-compose.yml  llms.txt  package-lock.json  package.json  shell.nix  tailwind.config.js  test_config.json
.github/workflows/: ci.yml
frontend/src/: index.html  index.js  styles.css
src/: config.rs  disk_manager.rs  disk_manager_ext.rs  error.rs  main.rs  recorder.rs  server.rs
