[package]
name = "video-stream-recorder"
version = "1.0.0"
edition = "2021"
description = "12-factor app for recording HTTPS webcam streams"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
ffmpeg-next = "6.0"
fs2 = "0.4"
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
reqwest = { version = "0.11", features = ["stream"] }

[dev-dependencies]
tempfile = "3.0"
